2010-04-15  Nicolas Weber  <thakis@chromium.org>

Reviewed by Dimitri Glazkov.

        Fix drag image thumbnails for indexed images.
        https://bugs.webkit.org/show_bug.cgi?id=37621

        * platform/chromium/DragImageChromiumMac.cpp:
        (WebCore::scaleDragImage): Always use RGB color space.
        (WebCore::dissolveDragImageToFraction): Always use RGB color space.

Canonical link: https://commits.webkit.org/48974@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57687 268f45cc-cd09-0410-ab3c-d52691b4dbfc